Cancel channel uploads during cleanup. b=201610 r=brade@netscape.com sr=jaggernaut@netscape.com